# Manta

./: '  .editorconfig  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .taplo.toml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FILE_TEMPLATE  README.md  benchmark.sh  deps.txt  deps_main.txt  file_header.txt  justfile  known-issues.md  manta-farming.rs  rust-toolchain.toml  staging-chainspec.json  staging-genesis.state  staging-genesis.wasm  types.json
nimbus-consensus/: Cargo.toml
nimbus-consensus/src/: import_queue.rs  lib.rs  manual_seal.rs
nimbus-primitives/: Cargo.toml
nimbus-primitives/src/: digests.rs  inherents.rs  lib.rs
node/: Cargo.toml  build.rs
node/.rpm/: manta.spec
node/src/: aura_or_nimbus_consensus.rs  builder.rs  calamari-pc.rs  chain_spec.rs  cli.rs  client.rs  command.rs  fake_runtime_api.rs  instant_finalize.rs  lib.rs  main.rs  manta-pc.rs  manta.rs  rpc.rs  service.rs  service_aura.rs  service_nimbus.rs
node/src/chain_specs/: calamari.rs  calamari_pc.rs  dolphin.rs  dolphin_two.rs  manta.rs  manta_pc.rs  mod.rs
node/src/chain_specs/calamari/: dev_genesis.rs  mod.rs
node/src/chain_specs/manta/: local_testnets_geneses.rs  mainnet_genesis.rs  mod.rs  public_testnet_genesis.rs
node/src/rpc/: calamari.rs  common.rs  dolphin.rs  manta.rs  mod.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: benchmarking.rs  benchmarks.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/aura-style-filter/: Cargo.toml
pallets/aura-style-filter/src/: lib.rs
pallets/author-inherent/: Cargo.toml
pallets/author-inherent/src/: exec.rs  lib.rs
pallets/author-slot-filter/: Cargo.toml
pallets/author-slot-filter/src/: benchmarks.rs  lib.rs  migration.rs  mock.rs  num.rs  tests.rs  weights.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: benchmarking.rs  lib.rs  migration.rs  tests.rs  tests_composite.rs  tests_local.rs  tests_reentrancy.rs  weights.rs
pallets/collator-selection/: Cargo.toml
pallets/collator-selection/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/farming/: Cargo.toml
pallets/farming/rpc/: Cargo.toml
pallets/farming/rpc/runtime-api/: Cargo.toml
pallets/farming/rpc/src/: lib.rs
pallets/farming/src/: benchmarking.rs  gauge.rs  lib.rs  migration.rs  mock.rs  rewards.rs  tests.rs  weights.rs
pallets/fuso-support/: Cargo.toml
pallets/fuso-support/src/: external_chain.rs  lib.rs  traits.rs
pallets/maintenance-mode/: Cargo.toml
pallets/maintenance-mode/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/manta-pay/: Cargo.toml  README.md
pallets/manta-pay/scripts/: check_integrations_failure.sh  check_integrations_success.sh
pallets/manta-pay/src/: common.rs  errors.rs  impl_pay.rs  ledger.rs  lib.rs  mock.rs  rpc.rs  runtime.rs  types.rs  weights.rs
pallets/manta-pay/src/benchmark/: mod.rs  precomputed_coins.rs  precomputed_mints
pallets/manta-pay/src/ledgers/: ftledger.rs  mod.rs  nftledger.rs
pallets/manta-pay/src/test/: mod.rs  payment.rs  storage.rs
pallets/manta-sbt/: Cargo.toml  precomputed_coins.rs
pallets/manta-sbt/src/: errors.rs  lib.rs  mock.rs  rpc.rs  runtime.rs  tests.rs  weights.rs
pallets/manta-sbt/src/benchmark/: mod.rs  precomputed_coins.rs
pallets/manta-sbt/src/test/: payment.rs  storage.rs
pallets/manta-support/: Cargo.toml
pallets/manta-support/src/: lib.rs  manta_pay.rs
pallets/manta-xassets/: Cargo.toml
pallets/manta-xassets/src/: lib.rs  tests.rs
pallets/manta-xassets/src/mock/: mod.rs  parachain.rs  relaychain.rs
pallets/mapobridge/: Cargo.toml
pallets/mapobridge/src/: alt_bn128.rs  crypto.rs  hash.rs  lib.rs  macros.rs  mapclient.rs  split.rs  traits.rs
pallets/mapobridge/src/serialization/: bytes.rs  mod.rs  rlp.rs
pallets/mapobridge/src/types/: common.rs  errors.rs  event.rs  header.rs  istanbul.rs  mod.rs  proof.rs  prover.rs
pallets/name-service/: Cargo.toml  README.md
pallets/name-service/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/native-barrier/: Cargo.toml
pallets/native-barrier/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  tests_reentrancy.rs  weights.rs
pallets/pallet-lottery/: Cargo.toml
pallets/pallet-lottery/src/: benchmarks.rs  lib.rs  mock.rs  rpc.rs  runtime.rs  staking.rs  tests.rs  weights.rs
pallets/pallet-lottery/src/staking/: deposit_strategies.rs  mod.rs  withdraw_strategies.rs
pallets/pallet-tx-pause/: Cargo.toml
pallets/pallet-tx-pause/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/parachain-staking/: Cargo.toml  README.md
pallets/parachain-staking/src/: benchmarks.rs  delegation_requests.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/randomness/: Cargo.toml  README.md
pallets/randomness/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/staking/: Cargo.toml
pallets/staking/fuzzer/src/: mock.rs
pallets/staking/reward-curve/: Cargo.toml
pallets/staking/reward-curve/src/: lib.rs
pallets/staking/reward-fn/: Cargo.toml
pallets/staking/reward-fn/src/: lib.rs
pallets/staking/src/: benchmarking.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  slashing.rs  testing_utils.rs  tests.rs  weights.rs
pallets/tx-pause/: Cargo.toml  README.md
pallets/tx-pause/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/vesting/: Cargo.toml
pallets/vesting/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml
primitives/manta/: Cargo.toml
primitives/manta/src/: assets.rs  constants.rs  currencies.rs  lib.rs  migration.rs  nft.rs  types.rs  xcm.rs
primitives/session-keys/: Cargo.toml
primitives/session-keys/src/: aura.rs  helpers.rs  inherent.rs  lib.rs  nimbus.rs  util.rs  vrf.rs
primitives/src/: assets.rs  constants.rs  helpers.rs  lib.rs  types.rs  xcm.rs
primitives/xcm/src/: lib.rs
session-keys/: Cargo.toml
session-keys/src/: lib.rs  nimbus.rs  nimbus_session_adapter.rs  vrf.rs
(+846 files in other folders)
